Fix floating buttons z-index and uploaded images spacing

--- a/src/app/shared/file-uploader/file-uploader.component.css
+++ b/src/app/shared/file-uploader/file-uploader.component.css
@@ -12,6 +12,7 @@
     width: 200px;
 
     position: relative;
+    margin-bottom: 5px;
 }
 .upload-container .upload-img-wrapper:has(~*) {
     margin-right: 5px;
