--- a/src/styles.scss
+++ b/src/styles.scss
@@ -28,6 +28,7 @@ body {
 
   /* Z-index layers */
   --z-header: 10;
+  --z-fixed-buttons: 500;
   --z-loader: 3000;
 
   // Share Buttons
